--- a/Pages/Departments/Index.cshtml
+++ b/Pages/Departments/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Departments";
 }
 
-<h1>Departments</h1>
+<h2>Departments</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -26,35 +26,36 @@
                 @Html.DisplayNameFor(model => model.Department[0].Administrator)
             </th>
             <th>
-                token
+                Token
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Department) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Budget)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Administrator.FullName)
-            </td>
-            <td>
-                @Utility.GetLastChars(item.ConcurrencyToken)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.DepartmentID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.DepartmentID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.DepartmentID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Department)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Budget)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Administrator.FullName)
+                </td>
+                <td>
+                    @Utility.GetLastChars(item.ConcurrencyToken)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
